cmake_minimum_required(VERSION 3.26)
project(cpp_learning)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp_learning
#        cpp_basic/day_10.9_variable_constant.cpp
#        cpp_basic/welcome.cpp
#        cpp_basic/day_10.10_data_type.cpp
#        cpp_basic/mul.h
#        cpp_basic/mul.cpp
#        cpp_basic/day10.12_if_while_for.cpp
#        cpp_basic/day10.10_array.cpp
#        cpp_basic/day10.12_struct_union.cpp
#        cpp_basic/day10.13_pointers.cpp
#        cpp_basic/day10.16_function.cpp
#        数据结构与算法/线性表/线性表.cpp
#        数据结构与算法/线性表/单链表.cpp
#        数据结构与算法/栈和队列/顺序栈.cpp
#        数据结构与算法/栈和队列/链栈.cpp
#        数据结构与算法/栈和队列/顺序队列.cpp
#        数据结构与算法/栈和队列/链队列.cpp
#        数据结构与算法/串、数组、广义表/串_BF算法.cpp
#        数据结构与算法/串、数组、广义表/串_KMP算法.cpp
        数据结构与算法/串、数组、广义表/串_KMP算法_2.cpp
)
